feat: Implement Item Dropping Packets, Events and Listeners. Codecs only for 1.12.2